# authproxy

./: .gitignore  Makefile  db.py  pyproject.toml  requirements.txt
authproxy/: __init__.py  __main__.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql
libauthproxy/: __init__.py  models.py  routes.py  utils.py
queries/roles/: create_role.edgeql  delete_role.edgeql  list_roles.edgeql  read_role.edgeql
queries/tenants/: create_tenant.edgeql  delete_tenant.edgeql  list_tenants.edgeql  read_tenant.edgeql  update_tenant.edgeql
queries/users/: create_user.edgeql  delete_user.edgeql  get_user_by_email.edgeql  get_user_by_username.edgeql  list_users.edgeql  read_user.edgeql
scripts/: hash_password.py
tests/: test_routes.py
